# conf-count

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  RELEASES.md
src/: connection.rs  constants.rs  db_operations.rs  email_service.rs  image_comparison.rs  lib.rs  main.rs  request_generator.rs  response_service.rs  user_data.rs  user_data_upload_operations.rs  utils.rs
src/request_handlers/: admin_handler.rs  camera_handler.rs  conference_handler.rs  forgot_password_handler.rs  login_handler.rs  logout_handler.rs  reset_password_handler.rs  signup_handler.rs  user_details_handler.rs
static/: session_timeout.html
tests/resources/: environment variables.txt  test.txt
