[package]
name = "conf_count"
version = "0.1.0"
authors = ["pankajchaudhary<pankaj.chaudhary@knoldus.com>"]
edition = "2018"

[dependencies]
futures = "0.1"
actix = "0.7"
actix-web = "0.7"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.39"
mongodb = "0.3.12"
formdata = "0.12.3"
rusoto_rekognition = "0.38.0"
rusoto_core = "0.38.0"
rust-s3 = "0.11.0"
tokio = "0.1.19"
env_logger = "0.6.0"
log = "0.4.6"
lettre = "0.9.1"
lettre_email = "0.9.1"
openssl = { version = "0.10", features = ["vendored"] }
chrono = "0.4.6"
uuid = { version = "0.7", features = ["serde", "v4", "v5"] }
rust-crypto = "^0.2"
regex = "1.1.7"
